# uca

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  check_consistency.py  install_dependencies_jetson.sh  requirements.txt  test_setup_jetson.py
config/: camera_params.yaml  positions.yaml  yolov5_params.yaml
docs/: INDEX.md
docs/archives/: 2025-10-16_AUDIT_DOCUMENTATION.md  2025-10-16_GUIDE_CALIBRATION.md  2025-10-16_GUIDE_WEB_CALIBRATION.md  2025-10-16_NETTOYAGE_RAPPORT_FINAL.md  2025-10-16_NETTOYAGE_SCRIPTS.md  2025-10-16_PROJET_COMPLET_100_POURCENT.md  2025-10-16_PROJET_UNIFIE_RECAPITULATIF.md  2025-10-16_RAPPORT_TESTS_FINAL.md  2025-10-16_README_OLD.md  2025-10-16_RECAPITULATIF_CALIBRATION.md  2025-10-16_REORGANISATION_RAPPORT.md  2025-10-16_SYNTHESE_COMPLETE.md  2025-10-16_train_DEPLOIEMENT_COMPLET.md  2025-10-16_train_DEPLOIEMENT_RAPIDE.md  2025-10-16_train_GUIDE_TRC2025.md  2025-10-16_train_PROJET_STATUS.md  2025-10-16_web_CONFIGURATION_IP_INTERFACE.md  2025-10-16_web_CONFIGURATION_TERMINEE.md  2025-10-16_web_CORRECTION_CONNEXION.md  2025-10-16_web_README_CONFIGURATION.md  2025-10-16_web_README_OUVRIR_ICI.md  2025-10-16_web_RECAPITULATIF_CONFIG_IP.md  2025-10-16_web_TEST_CONFIGURATION_IP.md  ANALYSE_FICHIERS_IGNORER.md  MISSION_ACCOMPLIE.md  RAPPORT_CONFLIT_GIT.md  RAPPORT_NETTOYAGE_FINAL.md  README.md  (+1 more)
ros_package/: CMakeLists.txt  package.xml
ros_package/launch/: tri.launch
ros_package/scripts/: dofbot_tri_system.py  final_camera_node.py  i2c_controller_node.py  vision_node.py
ros_package/srv/: Classify.srv
scripts/: calibrate_positions.py  calibration_server.py  deploy_to_jetson.sh  test_model.py  test_model_on_images.py
tests/: test_camera.py  test_dofbot_movements.py  test_integration.py  test_vision_node.py  test_yolov5_model.py
trc2025_train_models/: README.md  requirements.txt
web/: README.md  calibration_interface.html  config.js
(+25 files in other folders)
