<?xml version="1.0"?>
<package format="2">
  <name>dofbot_tri</name>
  <version>0.0.0</version>
  <description>Système de tri autonome utilisant Dofbot et ROS</description>
  
  <maintainer email="tchidehoudodjivirgile@email.com">Ucaotech</maintainer>
  <license>MIT</license>

  <!-- Dépendances de build -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dépendances d'exécution -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
